--- a/app/assets/stylesheets/config/utilities/_spacing.scss
+++ b/app/assets/stylesheets/config/utilities/_spacing.scss
@@ -93,6 +93,19 @@
 	padding-left: 0;
 }
 
+.pr-0 {
+  padding-right: 0;
+}
+
+.px-0 {
+  @extend .pl-0;
+  @extend .pr-0;
+}
+
+.pt-0 {
+  padding-top: 0;
+}
+
 .p-1 {
 	padding: 4px;
 }
@@ -109,3 +122,8 @@
 	padding-left: 16px;
 	padding-right: 16px;
 }
+
+.spacer {
+  width: 8px;
+}
+
