--- a/app/views/profiles/_general_profile.html.erb
+++ b/app/views/profiles/_general_profile.html.erb
@@ -1,36 +1,47 @@
 <div class="generalProfile">
 
   <div class="profileBanner" style="background-image: url(<%= avatar_url(@profile) %>)">
-    <div class="mask">
 
+  </div>
+  <div class="profileHeader">
+    <div class="profileHeaderRight">
+      <h1><%= @profile.user.display_name %></h1>
+      <p class="textGray"><%= @profile.profession %>, <%= @profile.location %></p>
     </div>
-    <div class="profileHeader">
-      <div class="profileHeaderRight">
-        <h1><%= @profile.user.display_name %></h1>
-        <p class="textGray"><%= @profile.profession %>, <%= @profile.location %></p>
-      </div>
-      <div class="profileHeaderLeft">
-        ***** (14)
+    <div class="profileHeaderLeft">
+      <div class="flex items-center justify-content-center mt-3">
+        <% @profile.average_rating.to_i.times do %>
+          <%= image_tag "icons/colored-rating", alt: "rating" %>
+        <% end %>
+        <% (5 - @profile.average_rating.to_i).times do %>
+          <%= image_tag "icons/rating", alt: "rating" %>
+        <% end %>
+        <span class="rating-size">(<%= @profile.ratings.size %>)</span>
       </div>
     </div>
   </div>
 
-
-    <%# if @connection %>
-      <%#= link_to "Add Note", "#writeYourNote" %>
-    <%# else %>
-      <%#= link_to "+Add", "#"  %>
-    <%# end %>
-
-  <div class="profileButtons flex justify-content-between p-3 pt-0">
+  <div class="profileButtons flex justify-content-around p-3 pt-0">
     <% if current_user.manager? %>
       <% if @connection %>
         <%#= link_to "Remove from your network", connection_path(current_user.find_connection(@profile.user)), class: "mr-3", method: :delete %>
-        <%= link_to "Book", new_profile_booking_path(@profile), class: "mr-3", class: "btn btn-primary" %>
+        <%= link_to new_profile_booking_path(@profile), class: "mr-3", class: "btn-lg px-0 btn-primary" do %>
+          <%= image_tag "icons/schedule", alt: "Book user" %>
+          <p class="textWhite">BOOK</p>
+        <% end %>
       <% else %>
-        <%= link_to "Add +", profile_connections_path(@profile), class: "mr-3 btn btn-primary", method: :post %>
+        <%= link_to profile_connections_path(@profile), class: "mr-3 btn-lg px-0 btn-primary", method: :post  do %>
+          <%= image_tag "icons/user-plus", alt: "Add user" %>
+          <p class="textWhite">ADD</p>
+        <% end %>
       <% end %>
-      <%= link_to "Message", "#", class: "btn btn-white" %>
+      <div class="spacer">
+
+      </div>
+      <%= link_to "#", class: "btn-lg px-0 btn-white" do %>
+        <%= image_tag "icons/message", alt: "Messafe" %>
+        <p>MESSAGE</p>
+      <% end %>
   <% end %>
 
   </div>
@@ -39,8 +50,12 @@
   <div class="container">
 
     <div class="profileSection">
-      <h3>Skills</h3>
-      <p><%= @profile.skill_list %></p>
+      <h3 class="textGray">Key kills</h3>
+      <div class="flex justify-content-between">
+        <% @profile.skill_list.each do |skill| %>
+          <span><%= skill %></span>
+        <% end %>
+      </div>
     </div>
 
     <div class="profileSection">
