--- a/app/assets/stylesheets/config/utilities/_display.scss
+++ b/app/assets/stylesheets/config/utilities/_display.scss
@@ -34,6 +34,12 @@
 	justify-content: center;
 }
 
+.justify-content-end {
+	@extend .mr-3;
+
+	justify-content: flex-end;
+}
+
 .list-style-none {
 	list-style: none;
 }
@@ -60,4 +66,8 @@
 
 .text-center {
 	text-align: center;
+}
+
+.relative {
+	position: relative;
 }
