add action button

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,4 +1,4 @@
-<div class="profiles-index">
+<div class="profiles-index relative">
   <section class="head">
     <button>
       <%= image_tag "icons/search", alt: "search" %>
@@ -36,3 +36,5 @@
     <% end %>
   </section>
 </div>
+
+<%= javascript_pack_tag "components/ActionButton" %>
