--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -23,7 +23,8 @@
       <% if @profiles.size.positive? %>
         <% @profiles.each do |profile| %>
           <% conversation ||= current_user.conversation_with(profile.user) %>
-          <%= render partial: "profiles/card", locals: { profile: profile, conversation: conversation } %>
+          <% connection ||= current_user.find_connection(profile.user) %>
+          <%= render partial: "profiles/card", locals: { profile: profile, conversation: conversation, add_to_network: !connection.present? } %>
         <% end %>
       <% else %>
         <h2>You don't have any freelancers in your network</h2>
@@ -31,7 +32,8 @@
     <% else %>
       <% @profiles.each do |profile| %>
         <% conversation ||= current_user.conversation_with(profile.user) %>
-        <%= render partial: "profiles/card", locals: { profile: profile, conversation: conversation } %>
+        <% connection ||= current_user.find_connection(profile.user) %>
+        <%= render partial: "profiles/card", locals: { profile: profile, conversation: conversation, add_to_network: !connection.present? } %>
       <% end %>
     <% end %>
   </section>
