action button styling

--- a/app/assets/stylesheets/pages/_profiles_index.scss
+++ b/app/assets/stylesheets/pages/_profiles_index.scss
@@ -32,10 +32,10 @@
 	}
 
 	.action-button {
-		@extend .flex, .justify-content-end;
+		@extend .flex, .justify-content-end, .mr-3;
 
 		position: sticky;
-		bottom: 40px;
+		bottom: 80px;
 		right: 24px;
 
 		.actions {
