update icon usage to include `.svg`

--- a/app/views/pages/_manager_dashboard.html.erb
+++ b/app/views/pages/_manager_dashboard.html.erb
@@ -11,7 +11,7 @@
 <div class="manager-dashboard-actions">
   <div class="flex items-center">
     <%= link_to "Email invite", new_user_invitation_path  %>
-    <%= image_tag "icons/mail", alt: "Invite a freelancer" %>
+    <%= image_tag "icons/mail.svg", alt: "Invite a freelancer" %>
   </div>
   <%= link_to "CSV upload", "#" %>
   <%= link_to "Browse flxibl", profiles_path %>
