--- a/app/views/jobs/_card.html.erb
+++ b/app/views/jobs/_card.html.erb
@@ -8,7 +8,7 @@
   </div>
   <div class="job-actions flex items-center ml-3">
     <%= link_to job_path(job) do %>
-      <%= image_tag "icons/right-arrow", alt: "right arrow" %>
+      <%= image_tag "icons/right-arrow.svg", alt: "right arrow" %>
     <% end %>
   </div>
 </div>
