--- a/app/views/pages/_freelancer_dashboard.html.erb
+++ b/app/views/pages/_freelancer_dashboard.html.erb
@@ -3,7 +3,7 @@
   <div class="manager-dashboard-actions">
     <div class="flex items-center">
       <%= link_to "Email invite", new_user_invitation_path  %>
-      <%= image_tag "icons/mail", alt: "Invite a manager" %>
+      <%= image_tag "icons/mail.svg", alt: "Invite a manager" %>
     </div>
   </div>
 
