--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,20 +1,20 @@
 <div class="profiles-index">
   <section class="head">
     <button>
-      <%= image_tag "icons/search", alt: "search" %>
+      <%= image_tag "icons/search.svg", alt: "search" %>
     </button>
     <p>FREELANCERS</p>
     <button>
-      <%= image_tag "icons/filter", alt: "filter" %>
+      <%= image_tag "icons/filter.svg", alt: "filter" %>
     </button>
   </section>
 
   <section class="switch flex justify-content-between p-3 my-3" style="background-color: #F9FBFE;">
     <%= link_to profiles_path(network: true), class: "flex items-center btn #{params[:network] ? 'btn-white' : 'btn-transparent'}" do %>
-      <%= image_tag "icons/person-check", alt: "in network" %> My network
+      <%= image_tag "icons/person-check.svg", alt: "in network" %> My network
     <% end %>
     <%= link_to profiles_path, class: "flex items-center btn #{params[:network] ? 'btn-transparent' : 'btn-white'}" do %>
-      <%= image_tag "icons/people", alt: "everyone" %> Everyone
+      <%= image_tag "icons/people.svg", alt: "everyone" %> Everyone
     <% end %>
   </section>
 
