--- a/app/assets/stylesheets/pages/_profiles_index.scss
+++ b/app/assets/stylesheets/pages/_profiles_index.scss
@@ -28,7 +28,7 @@
 		@extend .px-3;
 
 		display: grid;
-		grid-template-columns: auto auto;
+		grid-template-columns: 1fr 1fr;
 	}
 
 	.action-button {
