--- a/app/views/profiles/_card.html.erb
+++ b/app/views/profiles/_card.html.erb
@@ -9,19 +9,25 @@
         <%= image_tag "icons/calendar.svg", alt: "calendar", class: "icon" %>
       <% end %>
     <% end %>
-    <% if profile.user.avatar.attached? %>
-      <%= image_tag profile.user.avatar.service_url, alt: "profile avatar", width: 64, height: 64 %>
-    <% else %>
-      <%= image_tag "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_160x56dp.png", alt: "profile avatar", height: 64, width: 64 %>
+
+    <%= link_to profile_path(profile) do %>
+      <% if profile.user.avatar.attached? %>
+        <%= image_tag profile.user.avatar.service_url, alt: "profile avatar", width: 64, height: 64 %>
+      <% else %>
+        <%= image_tag "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_160x56dp.png", alt: "profile avatar", height: 64, width: 64 %>
+      <% end %>
     <% end %>
+
     <button class="action"><%= image_tag "icons/more.svg", alt: "more", class: "icon" %></button>
   </div>
   <div class="bottom">
-    <div class="text-group">
-      <h3 class="name"><%= profile.user.display_name %></h3>
-      <h5 class="profession"><%= profile.profession %></h5>
-      <p class="location"><%= profile.location %></p>
-    </div>
+    <%= link_to profile_path(profile) do %>
+      <div class="text-group">
+        <h3 class="name"><%= profile.user.display_name %></h3>
+        <h5 class="profession"><%= profile.profession %></h5>
+        <p class="location"><%= profile.location %></p>
+      </div>
+    <% end %>
 
     <% if conversation %>
       <%= link_to conversation_path(conversation), class: "btn btn-white mt-3" do %>
