styles for jobs new

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -3,5 +3,6 @@
 @import "conversations_show";
 @import "dashboard";
 @import "home";
+@import "jobs_new";
 @import "profile_show";
 @import "profiles_index";
