--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,5 +1,6 @@
 button,
-a {
+a,
+input[type="submit"] {
 	@extend .no-decoration;
 	border: none;
 	background: transparent;
@@ -13,10 +14,10 @@ a {
 		padding: 8px 16px;
 	}
 
-  &.btn-lg {
-    @extend .btn;
-    padding: 16px 32px;
-  }
+	&.btn-lg {
+		@extend .btn;
+		padding: 16px 32px;
+	}
 
 	&.btn-primary {
 		color: #fff;
