design job page

--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -19,7 +19,7 @@
   <%= f.input :expertise, collection: Profile::EXPERTISES, label: "Experience level:"%>
 
   <%= f.input :skill_list, label: "Key skills (max 5, comma separated)" %>
-  <%= f.input :overview, label: "Professinal summary:", as: :text  %>
+  <%= f.input :overview, label: "Professional summary:", as: :text  %>
 
   <h2>3. Links and documents</h2>
 
