--- a/app/assets/stylesheets/pages/_job_show.scss
+++ b/app/assets/stylesheets/pages/_job_show.scss
@@ -1,6 +1,6 @@
 .job-show {
 	section {
-		&.applicant-avatars {
+		.applicant-avatars {
 			@extend .flex, .justify-content-center;
 
 			.small-avatar {
