--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -19,14 +19,22 @@
     <%= image_tag "icons/more.svg", alt: "more", width: 24, height: 24 %>
   </div>
 
-  <section class="applicant-avatars">
-    <% @job.job_applications.includes(profile: [user: :avatar_attachment]).limit(5).each do |ja| %>
-      <%= render partial: "profiles/small_avatar", locals: { profile: ja.profile } %>
+  <section class="mx-3">
+    <%= link_to profiles_path(job_id: @job.id), class: "btn btn-secondary my-3" do %>
+      <div class="flex justify-content-center items-center">
+        <%= image_tag "icons/people.svg", alt: "people", width: 24, height: 24 %>
+        <span class="textWhite">View applicants (<%= @job.job_applications.count %>)</span>
+      </div>
     <% end %>
-    <% last_application ||= @job.job_applications.last %>
-    <div class="small-avatar">
-      <div class="last-avatar" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= avatar_url(last_application.profile) %>');">
-        + <%= @job.job_applications.count - 5 %>
+    <div class="applicant-avatars">
+      <% @job.job_applications.includes(profile: [user: :avatar_attachment]).limit(5).each do |ja| %>
+        <%= render partial: "profiles/small_avatar", locals: { profile: ja.profile } %>
+      <% end %>
+      <% last_application ||= @job.job_applications.last %>
+      <div class="small-avatar">
+        <div class="last-avatar" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= avatar_url(last_application.profile) %>');">
+          + <%= @job.job_applications.count - 5 %>
+        </div>
       </div>
     </div>
   </section>
