--- a/app/assets/stylesheets/config/utilities/_spacing.scss
+++ b/app/assets/stylesheets/config/utilities/_spacing.scss
@@ -16,7 +16,7 @@
 }
 
 .m-0 {
-  margin: 0;
+	margin: 0;
 }
 
 .mb-2 {
@@ -24,7 +24,7 @@
 }
 
 .mr-2 {
-  margin-right: 8px
+	margin-right: 8px;
 }
 
 .mx-0 {
@@ -54,6 +54,10 @@
 	margin-right: 16px;
 }
 
+.mb-1 {
+	margin-bottom: 4px;
+}
+
 .mb-3 {
 	margin-bottom: 16px;
 }
@@ -81,11 +85,11 @@
 }
 
 .mt-4 {
-  margin-top: 32px;
+	margin-top: 32px;
 }
 
 .mt-5 {
-  margin-top: 64px;
+	margin-top: 64px;
 }
 
 // Padding
@@ -98,16 +102,16 @@
 }
 
 .pr-0 {
-  padding-right: 0;
+	padding-right: 0;
 }
 
 .px-0 {
-  @extend .pl-0;
-  @extend .pr-0;
+	@extend .pl-0;
+	@extend .pr-0;
 }
 
 .pt-0 {
-  padding-top: 0;
+	padding-top: 0;
 }
 
 .p-1 {
@@ -128,6 +132,5 @@
 }
 
 .spacer {
-  width: 8px;
+	width: 8px;
 }
-
