--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -22,7 +22,7 @@
   <section class="mx-3">
     <%= link_to profiles_path(job_id: @job.id), class: "btn btn-secondary my-3" do %>
       <div class="flex justify-content-center items-center">
-        <%= image_tag "icons/people.svg", alt: "people", width: 24, height: 24 %>
+        <%= image_tag "icons/people.svg", alt: "people", width: 24, height: 24, class: "mr-3" %>
         <span class="textWhite">View applicants (<%= @job.job_applications.count %>)</span>
       </div>
     <% end %>
@@ -31,11 +31,13 @@
         <%= render partial: "profiles/small_avatar", locals: { profile: ja.profile } %>
       <% end %>
       <% last_application ||= @job.job_applications.last %>
-      <div class="small-avatar">
-        <div class="last-avatar" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= avatar_url(last_application.profile) %>');">
-          + <%= @job.job_applications.count - 5 %>
+      <% if last_application %>
+        <div class="small-avatar">
+          <div class="last-avatar" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= avatar_url(last_application.profile) %>');">
+            + <%= @job.job_applications.count - 5 %>
+          </div>
         </div>
-      </div>
+      <% end %>
     </div>
   </section>
 
