--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,6 +7,7 @@ $orange: #ff9774;
 $red: #ff464b;
 $black: #2f2f3e;
 $light-black: #6c7b8a;
+$blueish-gray: #F4F6F9;
 
 $dark-blue-gradient: linear-gradient(315deg, #4048ef 0%, #5a7bef 100%);
 $light-blue-gradient: linear-gradient(
