--- a/app/assets/stylesheets/pages/_profile_show.scss
+++ b/app/assets/stylesheets/pages/_profile_show.scss
@@ -23,6 +23,10 @@
     @extend .mb-0;
     @extend .mt-2;
   }
+    .rating-size {
+      margin-left: 4px;
+      color: #6c7b8a;
+    }
 }
 
 .profileButtons {
@@ -30,6 +34,7 @@
     flex-grow: 1;
     border-radius: 8px;
     text-align: center;
+    font-size: 12px;
   }
 
   a {
@@ -75,4 +80,12 @@
 .profileButtons {
   @extend .p-3;
   @extend .pt-0;
+}
+
+#writeYourNote {
+  textarea {
+    box-sizing: border-box;
+    height: 120px;
+  }
+
 }
