fix and remove todo comment

--- a/app/assets/stylesheets/pages/_profile_show.scss
+++ b/app/assets/stylesheets/pages/_profile_show.scss
@@ -30,6 +30,9 @@
 }
 
 .profileButtons {
+
+  margin-top: -32px; // Removes white space left by relative position of the div above it
+
   .btn-lg {
     flex-grow: 1;
     border-radius: 8px;
