major improvements on bookings#new

--- a/app/assets/stylesheets/config/utilities/_display.scss
+++ b/app/assets/stylesheets/config/utilities/_display.scss
@@ -2,12 +2,29 @@
 	display: none;
 }
 
+.block {
+  display: block;
+}
+
+.none {
+  display: none;
+}
+
 .flex {
 	display: flex;
 
 	&.flex-column {
 		flex-direction: column;
 	}
+
+  &.flex-row-reverse {
+    flex-direction: row-reverse;
+  }
+
+}
+
+.flex-shrink-2 {
+  flex-shrink: 2;
 }
 
 .flex-grow-1 {
