--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -3,6 +3,7 @@
 @import "conversations_show";
 @import "dashboard";
 @import "home";
+@import "jobs_index";
 @import "jobs_new";
 @import "job_show";
 @import "profile_show";
