--- a/app/views/profiles/_small_avatar.html.erb
+++ b/app/views/profiles/_small_avatar.html.erb
@@ -1,3 +1,3 @@
 <div class="small-avatar">
-  <%= image_tag avatar_url(profile), alt: "avatar", width: 16, height: 16 %>
+  <%= image_tag avatar_url(profile), alt: "avatar", width: size, height: size %>
 </div>
