--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,4 +1,44 @@
 #dashboardPage {
+	.jobs {
+		.active-jobs {
+			.applicant-avatars {
+				@extend .flex, .justify-content-center;
+
+				.small-avatar {
+					@extend .flex, .justify-content-center, .items-center;
+
+					&:first-of-type {
+						margin-left: unset !important;
+					}
+
+					margin-left: -10px;
+					background: white;
+					border-radius: 50%;
+					height: 40px;
+					width: 40px;
+
+					img {
+						border-radius: 50%;
+						width: 80%;
+						height: 80%;
+					}
+
+					.last-avatar {
+						@extend .rounded-circle,
+							.textWhite,
+							.flex,
+							.justify-content-center,
+							.items-center;
+
+						width: 80%;
+						height: 80%;
+						background-size: cover;
+					}
+				}
+			}
+		}
+	}
+
 	.bookings {
 		.booking-cards {
 			.booking-card {
