--- a/app/views/pages/_manager_dashboard.html.erb
+++ b/app/views/pages/_manager_dashboard.html.erb
@@ -8,7 +8,7 @@
   <%= link_to "Browse flxibl", profiles_path %>
 </div>
 
-<section>
+<section class="jobs">
   <div class="active-jobs">
     <div class="flex justify-content-between items-center">
       <h3>Active job posts</h3>
