--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,6 +1,7 @@
 @import "avatar";
 @import "button";
 @import "booking_card";
+@import "booking_form";
 @import "input";
 @import "message";
 @import "navbar";
