--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -1,5 +1,15 @@
 #calendar-page {
 	#calendar {
+		@extend .relative;
+
+		form.bookingForm {
+			position: absolute;
+			height: 100vh;
+			width: 100%;
+			background: white;
+			z-index: 1;
+		}
+
 		.calendarContainer {
 			display: flex;
 			overflow-x: scroll;
@@ -32,6 +42,7 @@
 					@extend .flex, .flex-column, .items-center;
 
 					width: 80px;
+					border: 2px solid blue;
 
 					span {
 						color: #8a9099;
