--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,11 +6,21 @@
 @import "components/index";
 @import "pages/index";
 
+html, body {
+  @extend .h-100;
+}
+
 body {
 	margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 * {
 	font-family: "Montserrat", sans-serif;
 	color: $black;
+}
+
+.yielded-content {
+  flex: 1 0 auto;
 }
