--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,4 +1,5 @@
 nav.navbar {
+  flex-shrink: 0; // For sticky footer behavior
 	position: sticky;
 	bottom: 0;
 	background: white;
@@ -14,3 +15,4 @@ nav.navbar {
 		}
 	}
 }
+
