--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
 
   <body>
     <%= render 'shared/flashes' %>
-    <%= yield %>
+    <div class="yielded-content">
+      <%= yield %>
+    </div>
     <% if user_signed_in? %>
       <%= link_to "SIGN OUT BUTTON", destroy_user_session_path, method: :delete %>
     <% else %>
