--- a/app/assets/stylesheets/components/_booking_form.scss
+++ b/app/assets/stylesheets/components/_booking_form.scss
@@ -1,3 +1,20 @@
+.booking-form-header {
+	@extend .mb-3, .px-3;
+
+	.profile {
+		p {
+			@extend .mt-0, .mb-1;
+
+			font-weight: 600;
+			color: $dark-gray;
+		}
+
+		span {
+			color: $light-black;
+		}
+	}
+}
+
 .bookingForm {
 	.input-wrapper {
 		@extend .flex, .flex-column, .mb-3;
