--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -19,12 +19,32 @@
 			}
 
 			.week {
-				background: lightblue;
-				height: 80px;
+				height: 120px;
 				display: flex;
 
 				&.profile {
-					background: rgb(120, 120, 196);
+					@extend .flex,
+						.flex-column,
+						.items-center,
+						.justify-content-center,
+						.px-1;
+
+					img {
+						width: 48px;
+						height: 48px;
+					}
+
+					p {
+						font-size: 14px;
+						color: #3f434a;
+					}
+
+					span {
+						@extend .text-center, .mt-1;
+
+						font-size: 12px;
+						color: #828282;
+					}
 				}
 
 				&.blank {
@@ -42,7 +62,7 @@
 					@extend .flex, .flex-column, .items-center;
 
 					width: 80px;
-					border: 2px solid blue;
+					border: 1px solid transparent;
 
 					span {
 						color: #8a9099;
@@ -67,11 +87,12 @@
 			.daysCollection {
 				@extend .flex;
 
-				height: 80px;
+				height: 120px;
 
 				.day {
-					border: 2px solid red;
+					border: 1px solid #e8e9eb;
 					width: 80px;
+					height: 120px;
 				}
 			}
 		}
