--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -93,6 +93,10 @@
 					border: 1px solid #e8e9eb;
 					width: 80px;
 					height: 120px;
+
+					&.today {
+						background: #fafbff;
+					}
 				}
 			}
 		}
